fix alignment

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,13 @@ body {
   background-color: var(--light-blue);
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 p {
   margin: 0;
   font-family: 'Crimson';
